--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -220,20 +220,30 @@
         
 }
 
-.contacto {
+.projects {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;    
 }
-.contacto h1 {
-    margin-bottom: 20px;
+.projects h1{
+    margin: 20px;
+
+}
+.fleximg{
+    display: flex;
+    margin-bottom: 10px;    
+}
+.fleximg img{
+    border-radius: 3px;    
+    position: relative;    
+    text-align: center;
 }
 
-.contacto iframe{
-    border: 0;
-    width: 100%;
-    height: 400px;
-    margin-bottom: 15px;
+
+.fleximg p{
+    font-size: 20px;
+    text-align: left;
+    width: 500px;
+    margin: 20px 5px;
 }
 
-.contacto p {
-    margin-bottom: 20px;
-}
